FIX: overflow content

--- a/css/app.css
+++ b/css/app.css
@@ -34,13 +34,12 @@ html{
     justify-content: space-between;
     align-items: center;
     width: 100%; 
-    bottom: 0px;
-    position: sticky;
+    height: 100px;
 }
 
 .container-full{
     display: flex;
-    height: 100%;
+    height: calc(100% - 100px)
 }
 .upgrade-bar{
     height: 90px;
